Squashing a few bugs

--- a/src/App/scenes/ScoringScene/ScoringContainer.module.scss
+++ b/src/App/scenes/ScoringScene/ScoringContainer.module.scss
@@ -31,4 +31,8 @@
   &__ListGroupItemName {
     flex-grow: 1;
   }
+
+  &__ListGroupItemIcon {
+    flex-shrink: 0;
+  }
 }
